--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dompurify": "^3.3.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.25",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.556.0",
     "react": "^19.2.1",
     "react-error-boundary": "^6.0.0",
