security: finalize hardening (mobile storage, pii fixes, headers)

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@capacitor/status-bar": "^8.0.0",
     "@supabase/supabase-js": "^2.87.0",
     "canvas-confetti": "^1.9.4",
+    "capacitor-secure-storage-plugin": "^0.13.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dompurify": "^3.3.1",
