--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@capacitor/splash-screen": "^8.0.0",
     "@capacitor/status-bar": "^8.0.0",
     "@supabase/supabase-js": "^2.87.0",
+    "@tanstack/react-query": "^5.90.21",
+    "@tanstack/react-query-devtools": "^5.91.3",
+    "@tanstack/react-virtual": "^3.13.18",
     "canvas-confetti": "^1.9.4",
     "capacitor-secure-storage-plugin": "^0.13.0",
     "clsx": "^2.1.1",
@@ -41,6 +44,7 @@
     "react-confetti": "^6.4.0",
     "react-error-boundary": "^6.0.0",
     "react-ga4": "^2.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.10.1",
     "tailwind-merge": "^3.4.0"
   },
@@ -57,11 +61,14 @@
     "autoprefixer": "^10.4.22",
     "jsdom": "^27.3.0",
     "postcss": "^8.5.6",
+    "sharp": "^0.34.5",
+    "svgo": "^4.0.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
     "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-image-optimizer": "^2.0.3",
     "vite-plugin-pwa": "^1.2.0",
     "vitest": "^4.0.15"
   }
